@@ -2,6 +2,8 @@
 
     * src/listsort.c: Reformat function documentation.
 
+    * src/s_string_list.c: Add debug code to print the attribute list.
+
 2019-11-11 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/s_sheet_data.c: Update s_sheet_data_add_master_comp_list_items
